# target-discovery-copilot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: dbt-ci.yml
agent/: target_discovery_agent.py
ci/fixtures/open_targets/: fixture.parquet
dashboard/: parsers.py
dashboard/streamlit/: app.py
dashboard/streamlit/pages/: agent.py  analytics.py
dbt/: dbt_project.yml
dbt/models/marts/: mart_target_rankings.sql
dbt/models/staging/: schema.yml  sources.yml  stg_health_check.sql  stg_open_targets__associations.sql
dbt/profiles/: profiles.yml
dbt/seeds/: disease_names.csv  gene_symbols.csv
notebooks/: explore_open_targets.py  final_table_test.py  int_data_model_check.py
pipelines/: fetch_open_targets.nf
scripts/: fetch_disease_names.py  fetch_gene_symbols.py
tests/: conftest.py  test_agent_tools.py  test_fetch_scripts.py  test_parsers.py
