[project]
name = "target-discovery-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
]
